# UselessBrowser

./: .gitignore  README.md  launcher.py  launcher_debug.py  main.py  plans.md  pyproject.toml  run_app.bat
.github/workflows/: release.yml
.trae/documents/: plan_20260117_213706.md  plan_20260117_232003.md
app/: app_config.py  background_manager.py  browser_library.py  effects.py  glass_effect.py  glass_widgets.py  home_cards.py  main_window.py  profile_utils.py  ui_builders.py  ui_glass_styles.py  ui_strings.py  workers.py
app/adapters/: base.py  camoufox.py  chromium.py  registry.py
app/features/: base.py  browser_library.py  dialogs.py  home.py  install_browser.py  launch.py  onboarding.py  profiles.py  settings.py
app/registration/: browser.py
app/spoofers/: __init__.py  base.py  battery.py  behavior.py  fonts.py  geolocation.py  ip_timezone.py  network.py  profile.py  profile_storage.py  screen.py
i18n/: en-US.json  zh-CN.json
registration/: browser.py
spoofers/: audio.py  automation.py  canvas.py  cdp_hide.py  cdp_spoofer.py  client_hints.py  navigator.py  profile.py  profile_storage.py  sensors.py  timezone.py  webgl.py  webrtc.py
tests/: test_adapter.py
