[project]
name = "uselessbrowser"
version = "0.1.0"
description = "基于 PyQt6 + Fluent UI 的指纹浏览器工作台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "drissionpage>=4.1.1.2",
    "spoof>=1.5.3",
    "PyQt6>=6.6",
    "pyqt6-fluent-widgets @ git+https://github.com/zhiyiYo/PyQt-Fluent-Widgets.git@PyQt6",
    "camoufox[geoip]>=0.4.11",
]
